2009-06-02  Christophe Demko <contact@chdemko.com>
  * correcting a bug in admin/install.sql (experimental.jos_categories to #__categories)
  * Publishing the 0.0.4 version
  
2009-06-01  Christophe Demko <contact@chdemko.com>
  * adding site/helpers folder to the installation file
  * correcting a bug in site/helpers/category.php (#__hello to hello)
  * changing the category field extension type from com_content to com_hello in admin/models/hello/forms/hello.xml
  * adding two required field (checked_out and checked_out_time) (for using categories) in #__hello field admin/tables/hello.php and admin/install.sql
  * adding two categories for com_hello component in admin/install.sql
  * Publishing the 0.0.3 version
  
2009-05-21  Christophe Demko <contact@chdemko.com>
  * Publishing the 0.0.1 version
