@@ -2,6 +2,9 @@
 
 HELLO_ADMINISTRATOR=Administrator
 HELLO_ARE_YOU_SURE_YOU_WANT_TO_DELETE_THESE_GREETINGS=Are you sure you want to delete these greetings?
+HELLO_CATEGORIES=Categories
+HELLO_CATEGORY=Category
+HELLO_CATEGORY_DESC=Category description
 HELLO_CLOSE=Close
 HELLO_DETAILS=Details
 HELLO_EDIT_CANCELLED=Edit cancelled
@@ -16,8 +19,8 @@ HELLO_HELLO_EDITING=Hello editing
 HELLO_HELLO=Hello
 HELLO_HELLO_MANAGER=Hello Manager
 HELLO_ID=ID
+HELLO_MESSAGES=Messages
 HELLO_NEW=New
 HELLO_SOME_VALUES_ARE_UNACCEPTABLE=Some values are unacceptable
 HELLO_UNVALIDATED_DATA=Unvalidated data: %s
-HELLO_CATEGORY=Category
-HELLO_CATEGORY_DESC=Category description
+
