@@ -2,5 +2,5 @@
 
 DROP TABLE IF EXISTS `#__hello`;
 
-DELETE FROM `#__categories` WHERE extension = 'com_hello';
+DELETE FROM `#__categories` WHERE `extension` = 'com_hello';
 
