@@ -12,6 +12,5 @@
 defined('_JEXEC') or die('Restricted access');
 echo $this->loadTemplate('behavior');
 echo $this->loadTemplate('document');
-echo $this->loadTemplate('toolbar');
 echo $this->loadTemplate('form');
 
