@@ -10,7 +10,7 @@
 	<copyright>Copyright Info</copyright>
 	<license>License Info</license>
 	<!--  The version string is recorded in the components table -->
-	<version>0.0.5</version>
+	<version>0.0.6</version>
 	<!-- The description is optional and defaults to the name -->
 	<description>Description of the Hello World component ...</description>
 
@@ -55,6 +55,7 @@
 			<filename>install.sql</filename>
 			<filename>uninstall.sql</filename>
 			<filename>controller.php</filename>
+			<folder>helpers</folder>
 			<folder>controllers</folder>
 			<folder>models</folder>
 			<folder>tables</folder>
