@@ -20,35 +20,30 @@ jimport('joomla.application.component.modelitem');
  */
 class HelloModelHello extends JModelItem {
 	/**
+	 * @var string msg
+	 */
+	protected $msg=null;
+	/**
 	 * Get the message
 	 * @return object The message to be displayed to the user
 	 */
-	public function getMsg() {
-		return $this->getState('msg');
-	}
-	/**
-	 * Method to auto-populate the model state.
-	 *
-	 * This method should only be called once per instantiation and is designed
-	 * to be called on the first call to the getState() method unless the model
-	 * configuration flag to ignore the request is set.
-	 *
-	 * @return	void
-	 */
-	protected function _populateState() {
-		$query = new JQuery;
-		// Select some field
-		$query->select('greeting, cat.title as category');
-		// From hello table
-		$query->from('#__hello as hello');
-		// Join over the categories.
-		$query->join('LEFT', '#__categories AS cat ON cat.id = catid');
-		// Order by rand
-		$query->order('RAND()');
-		$db = & $this->getDBO();
-		$db->setQuery($query->toString(), 0, 1);
-		$msg = & $db->loadObject();
-		$this->setState('msg', $msg);
+	public function getMsg()
+	{
+		if (empty($this->msg))
+		{
+			$query = new JQuery;
+			// Select some field
+			$query->select('greeting, cat.title as category');
+			// From hello table
+			$query->from('#__hello as hello');
+			// Join over the categories.
+			$query->join('LEFT', '#__categories AS cat ON cat.id = catid');
+			// Order by rand
+			$query->order('RAND()');
+			$this->_db->setQuery((string)$query, 0, 1);
+			$this->msg = & $this->_db->loadObject();
+		}
+		return $this->msg;
 	}
 }
 
